# wuwa-mod-manager-temp

./: .eslintrc.json  .prettierignore  .prettierrc  COMPLETE_F10_IMPLEMENTATION.md  F10_METHOD_SELECTION.md  F10_TESTING_GUIDE.md  FEATURES.md  FLASK_TO_RUST_MIGRATION.md  HOTRELOAD_COMPLETE.md  HOTRELOAD_FUNCTIONALITY.md  HOTRELOAD_TRIGGER_SYSTEM.md  MIGRATION_COMPLETE.md  OPTIMIZATIONS.md  OPTIMIZATION_GUIDE.md  PENDING_OPTIMIZATIONS.md  SESSION_IMPLEMENTATION_SUMMARY.md  SESSION_MANAGEMENT.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
src/: App.css  App.tsx  default.json  init.ts  main.tsx  variables.ts
src-py/: app.py
src-tauri/: 2  Cargo.toml  build.rs  config.json  config2.json  config3.json  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/cartethiya recolor pack - basic pack/: read this if it doesnt work.txt
src-tauri/cartethiya recolor pack - basic pack/girl form/purple/: Components-0 t=64cd06f9.dds  Components-1 t=3ff8b56e.dds
src-tauri/cartethiya recolor pack - basic pack/girl form/white/: Components-0 t=64cd06f9.dds  Components-1 t=3ff8b56e.dds
src-tauri/cartethiya recolor pack - basic pack/mommy form/blue/: Components-0-1 t=14e47dee.dds  Components-1 t=1f606caf.dds
src-tauri/cartethiya recolor pack - basic pack/mommy form/purple/: Components-0-1 t=14e47dee.dds  Components-1 t=1f606caf.dds
src-tauri/cartethiya recolor pack - basic pack/mommy form/white/: Components-0-1 t=14e47dee.dds  Components-1 t=1f606caf.dds
src-tauri/icons/: icon.icns
src-tauri/src/: hotreload.rs  image_server.rs  lib.rs  main.rs
src/App/Consent/: Consent.tsx
src/App/Intro/: Intro.tsx
src/App/LeftSideBar/: Left.tsx  LeftLocal.tsx  LeftOnline.tsx
src/App/LeftSideBar/components/: Downloads.tsx  Restore.tsx  Settings.tsx
src/App/Main/: Main.tsx  MainLocal.tsx  MainOnline.tsx  OptimizedMain.tsx
src/App/Main/components/: CardLocal.tsx  CardOnline.tsx  Carousel.tsx  Catbar.tsx  Filter.tsx  Navbar.tsx  OptimizedComponents.tsx  Updater.tsx
src/App/Progress/: Progress.tsx
src/App/RightSideBar/: RSCOnline.tsx  Right.tsx  RightLocal.tsx  RightOnline.tsx
src/App/RightSideBar/components/: Carousel.tsx
src/App/Tutorial/: Tutorial.tsx
src/App/Tutorial/pages/: Page.tsx  Page1.tsx  Page2.tsx  Page3.tsx  Page4.tsx  Page5.tsx  Page6.tsx  Page7.tsx  Page8.tsx  Page9.tsx
src/components/ui/: alert-dialog.tsx  button.tsx  card.tsx  carousel.tsx  checkbox.tsx  collapsible.tsx  command.tsx  dialog.tsx  dropdown-menu.tsx  label.tsx  popover.tsx  scroll-area.tsx  separator.tsx  sheet.tsx  sidebar.tsx  slider.tsx  switch.tsx  tabs.tsx  toggle.tsx  tooltip.tsx
src/major-components/: Catbar.tsx  Consent.tsx  Intro.tsx  Main.tsx  Navbar.tsx
src/major-components/sidebar/: Left.tsx  Right.tsx
src/minor-components/: CardLocal.tsx  LSCLocal.tsx  LSCOnline.tsx  RSCLocal.tsx  RSCOnline.tsx  Restore.tsx  Settings.tsx  readme.txt
src/utils/: asyncFileUtils.ts  commonHooks.ts  commonUtils.ts  config.ts  consts.ts  fs.ts  fsutils.ts  hotkeyUtils.ts  hotreload.ts  imageServer.ts  init.ts  logger.ts  optimizedAtoms.ts  optimizedSearch.ts  processUtils.ts  sessionManager.ts  types.ts  validation.ts  vars.ts
