[package]
name = "wuwa-mod-manager"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "wuwa_mod_manager_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-fs = "2"
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-http = "2"
reqwest = { version = "0.12.20", features = ["stream"] }
tokio = { version = "1.45.1", features = ["full"] }
tokio-util = "0.7.15"
zip = "4.1.0"
futures-util = "0.3.31"
unrar = "0.5.8"
sevenz-rust2 = "0.15.3"

