[package]
name = "wuwa-mod-manager"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "wuwa_mod_manager_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-fs = "2"
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-http = "2"
# Optimized reqwest with minimal features for smaller binary size
reqwest = { version = "0.12.20", features = ["stream"], default-features = false }
# Use tokio with only required features instead of "full"
tokio = { version = "1.45.1", features = ["rt-multi-thread", "fs", "io-util", "macros"] }
tokio-util = "0.7.15"
zip = "4.1.0"
futures-util = "0.3.31"
unrar = "0.5.8"
sevenz-rust2 = "0.15.3"
# HTTP server dependencies
warp = "0.3.6"
mime_guess = "2.0.4"
# Additional async utilities
once_cell = "1.19.0"
log = "0.4.20"
env_logger = "0.10.0"
urlencoding = "2.1.3"

# Windows-specific dependencies for hotreload functionality (legacy keybd_event only)
[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.9", features = [
    "winuser",
    "processthreadsapi",
    "handleapi",
    "winnt",
    "psapi"
] }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-global-shortcut = "2"

# Testing dependencies for image server
[dev-dependencies]
tempfile = "3.8.0"

# Add optimization profile for release builds
[profile.release]
# Enable link-time optimization for smaller and faster binaries
lto = true
# Use one codegen unit for better optimization
codegen-units = 1
# Enable panic abort for smaller binary size (optional - removes stack traces)
panic = "abort"
# Strip symbols for smaller binary
strip = true

